<resources>
    <string name="app_name">Eco Friendly App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="courses">Courses</string>
    <string name="forum">Forum</string>
    <string name="question_sessions">Question sessions</string>
    <string name="chats">Chats</string>
    <string name="title_activity_register">RegisterActivity</string>
</resources>